Bug 155747 - Writer crash when you delete/insert a new column and then select to accept the change
Summary: Writer crash when you delete/insert a new column and then select to accept th...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords: bibisectRequest, regression
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2023-06-09 07:01 UTC by NISZ LibreOffice Team
Modified: 2023-06-23 07:48 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-06-09 07:01:29 UTC
Description:
With table change tracking in Writer, if you insert or delete a new column, then select the changed column with mouse and accept the change, Writer crashes.

Steps to Reproduce:
1: Create a table in Writer.
2: Turn on the Track Changes feature. Edit -> Track Changes -> Track Changes.
3: Insert a new column.
4: Use your mouse to highlight the newly inserted column.
5: Accept the changes Edit -> Track Changes -> Manage.  

Actual Results:
Writer crashes.

Expected Results:
Writer does not crash.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.7.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3b294f6139028014e72379ebe8eda24a2bd32195
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL threaded
Comment 1 Commit Notification 2023-06-09 13:46:20 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9486ead7bbd5bd2460f5c75540dfeb731838e655

tdf#155747 sw tracked table column: fix crash at table selection

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-06-12 10:20:02 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/59952bf9b69b856ece35d03df06991c39adca267

tdf#155747 sw tracked table column: fix crash at table selection

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 NISZ LibreOffice Team 2023-06-23 07:48:08 UTC
Verified in:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 986c2d86a7b53a6599d014db7327f47cb33d4fea
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded