tdf#155747 sw tracked table column: fix crash at table selection

Selecting tracked columns and accepting their deletion resulted
crashing because of the outdated table cursor in IsCursorInTable()
call of UpdateTableStyleFormatting(). Remove table cursor before
calling DeleteCol().

Regression from commit d1004cdd6a445ae73673b0ca360ae034b0ec09f2
"tdf#150673 sw offapi: add change tracking of table column deletion".

Change-Id: I47f4db11bd7ce4ad851c0658eec3e12ce4fdf4a7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152792
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>